fixed overflow

--- a/styles/components/_galaxy.scss
+++ b/styles/components/_galaxy.scss
@@ -126,6 +126,7 @@ $logoScale: 2.75;
     left: 50%;
     margin: auto;
     opacity: 0;
+    overflow: hidden;
     position: absolute;
     text-align: center;
     top: 50%;
